--- a/css/styles.css
+++ b/css/styles.css
@@ -133,8 +133,14 @@ nav h1 a {
 #restaurants-list {
   background-color: #f3f3f3;
   list-style: outside none none;
-  margin: 0;
+  display: flex;
+  flex-wrap: wrap;  
+  flex-direction: row;
+  margin: auto;
   padding: 30px 15px 60px;
+  /* 
+  margin: 0; 
+  */  
   text-align: center;
 }
 #restaurants-list li {
@@ -146,6 +152,11 @@ nav h1 a {
   padding: 0 30px 25px;
   text-align: left;
   width: 270px;
+  /* 
+  display: inline-block;
+  width: 50%; 
+  */
+  
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
