--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,21 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   text-transform: uppercase;
 }
 /* ====================== Navigation ====================== */
+
+.skip-link {
+  position: absolute;
+  top: -40px;
+  left: 0;
+  z-index: 100;
+  background: #BF1722;
+  color: white;
+  padding: 8px;
+}
+
+.skip-link:focus {
+  top: 0;
+}
+
 nav {
   width: 100%;
   height: 80px;
