--- a/css/styles.css
+++ b/css/styles.css
@@ -121,9 +121,10 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
+  height: 60px;
   background-color: #3397DB;
   align-items: center;
+  padding: 10px;
 }
 .filter-options h2 {
   color: white;
@@ -159,13 +160,16 @@ nav h1 a {
 }
 #restaurants-list li {
   background-color: #fff;
+  /*
   border: 2px solid #ccc;
+  */
   font-family: Arial,sans-serif;
   margin: 15px;
   min-height: 380px;
-  padding: 0 30px 25px;
+  padding: 10px;
   text-align: left;
   width: 270px;
+  border-radius: 25px 0px;
   /* 
   display: inline-block;
   width: 50%; 
@@ -178,6 +182,7 @@ nav h1 a {
   max-width: 100%;
   min-height: 248px;
   min-width: 100%;
+  border-radius: 25px 0px;
 }
 #restaurants-list li h1 {
   color: #f18200;
@@ -195,7 +200,9 @@ nav h1 a {
 }
 #restaurants-list li a {
   background-color: orange;
+  /*
   border-bottom: 3px solid #eee;
+  */
   color: #fff;
   display: inline-block;
   font-size: 10pt;
@@ -283,7 +290,7 @@ nav h1 a {
 }
 #reviews-list li {
   background-color: #fff;
-    border: 2px solid #f3f3f3;
+  border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
   margin: 0 0 30px;
@@ -295,10 +302,12 @@ nav h1 a {
 #reviews-list li p {
   margin: 0 0 10px;
   background-color: #f00;
+  border-radius: 25% 0% 0% 0%;
 }
 #restaurant-hours td {
   color: #666;
 }
 #review-name {
   border-radius: 25% 0% 0% 0%;
+  padding: 10px;
 }
