--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0 0 20px;
 }
-article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section, main {
 	display: block;
 }
 #maincontent {
@@ -224,6 +224,9 @@ nav h1 a {
   background: blue none repeat scroll 0 0;
   height: 87%;
   position: fixed;
+  /*
+  position: fixed;
+  */
   right: 0;
   top: 80px;
   width: 50%;
