--- a/css/styles-small.css
+++ b/css/styles-small.css
@@ -233,7 +233,7 @@ nav h1 a {
 }
 .inside #map {
   background-color: #ccc;
-  height: 400px;
+  height: 100%;
   width: 100%;
 }
 .inside #footer {
