--- a/css/styles-medium.css
+++ b/css/styles-medium.css
@@ -221,20 +221,22 @@ nav h1 a {
   z-index: 1000;
 }
 .inside #map-container {
-  background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
+  height: 400px;
   /*
+  height: 87%;  
   position: fixed;
-  */
+  background: blue none repeat scroll 0 0;  
   right: 0;
   top: 80px;
-  width: 50%;
+  width: 50%;   
+  */
 }
 .inside #map {
-  background-color: #ccc;
-  height: 100%;
-  width: 100%;
+  height: 400px;
+  /*
+  width: 100%; 
+  background-color: #ccc;   
+  */  
 }
 .inside #footer {
   bottom: 0;
