--- a/css/styles-small.css
+++ b/css/styles-small.css
@@ -276,7 +276,7 @@ nav h1 a {
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
+  padding: 20px 40px 30px;
   width: 50%;
 }
 #reviews-container {
@@ -300,19 +300,27 @@ nav h1 a {
   list-style-type: none;
   margin: 0 0 30px;
   overflow: hidden;
-  padding: 0 20px 20px;
+  padding: 20px;
   position: relative;
   width: 85%;
 }
 #reviews-list li p {
-  margin: 0 0 10px;
-  background-color: #f00;
-  border-radius: 25% 0% 0% 0%;
+  margin: 0;
+  padding: 20px;
 }
 #restaurant-hours td {
   color: #666;
 }
-#review-name {
-  border-radius: 25% 0% 0% 0%;
-  padding: 10px;
+.review-name {
+  border-radius: 50% 0% 0% 0%;
+  height: 40px;
+  background-color: rgb(0, 0, 0);
+  color: #FFF;
+  font-size: 12pt;
+}
+.review-rating {
+  height: 40px;
+  background-color: rgb(228, 130, 26);
+  color: #FFF;
+  font-size: 12pt;
 }
