--- a/css/styles.css
+++ b/css/styles.css
@@ -255,7 +255,7 @@ nav h1 a {
 }
 #restaurant-img {
   width: 90%;
-  border-radius: 18% 0%;  
+  border-radius: 18px 0;  
 }
 #restaurant-address {
   font-size: 12pt;
@@ -312,7 +312,7 @@ nav h1 a {
   color: #666;
 }
 .review-name {
-  border-radius: 50% 0% 0% 0%;
+  border-radius: 15px 0 0 0;
   height: 40px;
   background-color: rgb(0, 0, 0);
   color: #FFF;
