--- a/css/styles.css
+++ b/css/styles.css
@@ -125,6 +125,9 @@ nav h1 a {
   background-color: #3397DB;
   align-items: center;
   padding: 10px;
+  display: flex;
+  flex-wrap: wrap;  
+  flex-direction: row;  
 }
 .filter-options h2 {
   color: white;
