working on menu accessibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -202,7 +202,7 @@ nav h1 a {
   font-size: 11pt;
 }
 #restaurants-list li a {
-  background-color: orange;
+  background-color: #7d4f00;
   /*
   border-bottom: 3px solid #eee;
   */
