--- a/css/styles.css
+++ b/css/styles.css
@@ -129,7 +129,7 @@ nav h1 a {
   flex-wrap: wrap;  
   flex-direction: row;  
 }
-.filter-options h2 {
+.menu-label {
   color: white;
   font-size: 1rem;
   font-weight: normal;
@@ -187,7 +187,7 @@ nav h1 a {
   min-width: 100%;
   border-radius: 25px 0px;
 }
-#restaurants-list li h1 {
+#restaurants-list li h2 {
   color: #f18200;
   font-family: Arial,sans-serif;
   font-size: 14pt;
