Lots of Accessibility and or CSS changes

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,23 +3,14 @@
 
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
-	color: #333;
+	font-size: 11pt;
+	color: #fbfbfb;
 	line-height: 1.5;
 }
 body {
 	background-color: #fdfdfd;
 	margin: 0;
 	position:relative;
-}
-ul, li {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
-	color: #333;
-}
-a {
-	color: orange;
-	text-decoration: none;
 }
 a:hover, a:focus {
 	color: #3397db;
@@ -30,7 +21,7 @@ a img{
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: Arial, Helvetica, sans-serif;
-  margin: 0 0 20px;
+  margin: 0 0 0px;
 }
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section, main {
 	display: block;
@@ -38,6 +29,25 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
+}
+header {
+  width: 100%;
+  background-color: #252831;
+  text-align:center;
+  vertical-align: middle;
+}
+
+header h1 {
+  margin: auto;
+  vertical-align: middle;
+}
+header h1 a {
+  color: #fff;
+  font-size: 14pt;
+  font-weight: 200;
+  letter-spacing: 10px;
+  text-transform: uppercase;
+  text-decoration: none;
 }
 #footer {
   background-color: #444;
@@ -63,15 +73,17 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 .skip-link:focus {
   top: 0;
 }
-
+/*
 nav {
   width: 100%;
   height: 80px;
   background-color: #252831;
   text-align:center;
+  vertical-align: middle;
 }
 nav h1 {
   margin: auto;
+  vertical-align: middle;
 }
 nav h1 a {
   color: #fff;
@@ -79,6 +91,8 @@ nav h1 a {
   font-weight: 200;
   letter-spacing: 10px;
   text-transform: uppercase;
+  text-decoration: none;
+  line-height: 1;
 }
 #breadcrumb {
     padding: 10px 40px 16px;
@@ -89,29 +103,30 @@ nav h1 a {
     width: calc(50% - 80px);
 }
 
-/* Display list items side by side */
+// Display list items side by side 
 #breadcrumb li {
     display: inline;
 }
 
-/* Add a slash symbol (/) before/behind each list item */
+// Add a slash symbol (/) before/behind each list item
 #breadcrumb li+li:before {
     padding: 8px;
     color: black;
     content: "/\00a0";
 }
 
-/* Add a color to all links inside the list */
+// Add a color to all links inside the list 
 #breadcrumb li a {
     color: #0275d8;
     text-decoration: none;
 }
 
-/* Add a color on mouse-over */
+// Add a color on mouse-over 
 #breadcrumb li a:hover {
     color: #01447e;
     text-decoration: underline;
 }
+*/
 /* ====================== Map ====================== */
 #map {
   height: 400px;
@@ -121,7 +136,6 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 60px;
   background-color: #3397DB;
   align-items: center;
   padding: 10px;
@@ -149,7 +163,7 @@ nav h1 a {
 }
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
-  background-color: #f3f3f3;
+  background-color: #b5c588;
   list-style: outside none none;
   display: flex;
   flex-wrap: wrap;  
@@ -162,7 +176,7 @@ nav h1 a {
   text-align: center;
 }
 #restaurants-list li {
-  background-color: #fff;
+  background-color: #083045;
   /*
   border: 2px solid #ccc;
   */
@@ -183,32 +197,36 @@ nav h1 a {
   display: block;
   margin: 0;
   max-width: 100%;
-  min-height: 248px;
   min-width: 100%;
-  border-radius: 25px 0px;
 }
 #restaurants-list li h2 {
-  color: #f18200;
+  color: #fbfbfb;
   font-family: Arial,sans-serif;
   font-size: 14pt;
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
-  margin: 20px 0 10px;
+  margin: 10px 0 5px;
   text-transform: uppercase;
 }
 #restaurants-list p {
   margin: 0;
   font-size: 11pt;
 }
+#restaurants-list p:nth-of-type(1) {
+  margin: 0;
+  font-size: 12pt;
+  font-weight: 550;
+}
 #restaurants-list li a {
-  background-color: #7d4f00;
+  background-color: #eed369;
   /*
   border-bottom: 3px solid #eee;
   */
-  color: #fff;
+  color: #083045;
   display: inline-block;
-  font-size: 10pt;
+  font-size: 11pt;
+  font-weight: 700;
   margin: 15px 0 0;
   padding: 8px 30px 10px;
   text-align: center;
@@ -217,12 +235,14 @@ nav h1 a {
 }
 
 /* ====================== Restaurant Details ====================== */
+/*
 .inside header {
   position: fixed;
   top: 0;
   width: 100%;
   z-index: 1000;
 }
+*/
 .inside #map-container {
   height: 400px;
   /*
@@ -256,9 +276,9 @@ nav h1 a {
   text-transform: uppercase;
   line-height: 1.1;
 }
-#restaurant-img {
+.restaurant-img {
   width: 90%;
-  border-radius: 18px 0;  
+  border-radius: 25px 0;  
 }
 #restaurant-address {
   font-size: 12pt;
