--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,9 @@ body,td,th,p{
 }
 body {
 	background-color: #fdfdfd;
-	margin: 0;
-	position:relative;
+	margin: auto;
+  position:relative;
+  max-width: 1330px;
 }
 a:hover, a:focus {
 	color: #3397db;
@@ -27,8 +28,9 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 	display: block;
 }
 #maincontent {
-  background-color: #f3f3f3;
+  background-color: #b5c588;;
   min-height: 100%;
+  padding: 5px;
 }
 header {
   width: 100%;
@@ -163,7 +165,7 @@ nav h1 a {
 }
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
-  background-color: #b5c588;
+  
   list-style: outside none none;
   display: flex;
   flex-wrap: wrap;  
@@ -176,21 +178,24 @@ nav h1 a {
   text-align: center;
 }
 #restaurants-list li {
-  background-color: #083045;
-  /*
-  border: 2px solid #ccc;
-  */
-  font-family: Arial,sans-serif;
   margin: 15px;
   min-height: 380px;
   padding: 10px;
-  text-align: left;
   width: 270px;
+}
+.restaurant-container {
+  background-color: #083045;
+  font-family: Arial,sans-serif;
+  text-align: left;
   border-radius: 25px 0px;
-  /* 
-  display: inline-block;
-  width: 50%; 
-  */
+  overflow: hidden;
+}
+#restaurant-container {
+  margin: 20px;
+  width: 50%;
+}
+.restaurant-info {
+  padding: 20px 40px 30px;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
@@ -277,8 +282,7 @@ nav h1 a {
   line-height: 1.1;
 }
 .restaurant-img {
-  width: 90%;
-  border-radius: 25px 0;  
+  width: 100%;
 }
 #restaurant-address {
   font-size: 12pt;
@@ -296,16 +300,12 @@ nav h1 a {
   text-transform: uppercase;
 	width: 90%;
 }
-#restaurant-container, #reviews-container {
-  border-bottom: 1px solid #d9d9d9;
-  border-top: 1px solid #fff;
-  padding: 20px 40px 30px;
-  width: 50%;
-}
+
 #reviews-container {
-  padding: 30px 40px 80px;
+  padding: 30px 0px 80px;
+  width: 100%;
 }
-#reviews-container h2 {
+#reviews-container h3 {
   color: #f58500;
   font-size: 24pt;
   font-weight: 300;
@@ -317,33 +317,51 @@ nav h1 a {
   padding: 0;
 }
 #reviews-list li {
-  background-color: #fff;
-  border: 2px solid #f3f3f3;
+  background-color: #eed369;
+  border-radius: 15px 0 0 0;
   display: block;
   list-style-type: none;
   margin: 0 0 30px;
   overflow: hidden;
-  padding: 20px;
   position: relative;
   width: 85%;
+  /*
+  border-bottom: 1px solid #d9d9d9;
+  */
 }
-#reviews-list li p {
+#reviews-list li div {
   margin: 0;
-  padding: 20px;
+
 }
 #restaurant-hours td {
-  color: #666;
+  color: #fff;
 }
-.review-name {
-  border-radius: 15px 0 0 0;
-  height: 40px;
+.review-top {
   background-color: rgb(0, 0, 0);
   color: #FFF;
   font-size: 12pt;
+  display: flex;
+  flex-wrap: wrap;  
+  flex-direction: row;
+  padding: 15px;
+}
+.review-name {
+  text-align: left;
+  width: 50%;
+}
+.review-date {
+  text-align: right;
+  width: 50%;
 }
 .review-rating {
-  height: 40px;
   background-color: rgb(228, 130, 26);
   color: #FFF;
   font-size: 12pt;
+  padding: 15px;
+}
+
+.review-comments {
+  color: #000;
+  font-size: 12pt;
+  padding: 25px 15px;
 }
