--- a/public/css/yucky.css
+++ b/public/css/yucky.css
@@ -1,3 +1,49 @@
+.modal {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    /* Next creates "faded background" behind modal when open */
+    background-color: rgba (0, 0, 0, 0.5);
+    /* What's the difference between 0.5 above and opacity below? */
+    opacity: 0;
+    visibility: hidden;
+    transform: scale (1.1);
+}
+
+.modal-content {
+    position: absolute;
+    top: 50%; /* From center, I presume? */
+    left: 50%;
+    transform: translate (-50%, -50%); /* What does this do? */
+    background-color: white;
+    padding: 1rem 1.5rem;
+    width: 24rem;
+    border-radius: 0.5rem;
+}
+
+.show-modal {
+    opacity: 1;
+    visibility: visible;
+    transform: scale(1.0);
+    transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+}
+
+.close-button {
+    float: right;
+    width: 1.5rem;
+    line-height: 1.5rem;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 0.25rem;
+    background-color: lightgray;
+}
+
+.close-button:hover {
+    background-color: darkgray;
+}
+
 .yuck {
     color: pink;
 }
