--- a/public/css/yucky.css
+++ b/public/css/yucky.css
@@ -1,3 +1,15 @@
+#heart {
+    font-size: 14pt;
+}
+
+.redQueen {
+    color: red;
+}
+
+.whiteQueen {
+    color: white;
+}
+
 .modal {
     position: fixed;
     left: 0;
